# mlops-pipeline

./: .gitignore  Dockerfile  data.dvc  demo.py  dvc.yaml  main.py  mlflow.db  params.yaml  pyproject.toml  serve.py
.dvc/: config
.github/workflows/: ci.yaml  train.yml
configs/: config.yaml
content/: dataset.dvc
experiments/: spam-detection.ipynb
mlruns/1/3d300c719336489895f6d053ca4a753a/artifacts/: dvc_status.json
mlruns/1/models/m-38bef6750c604b4aa37b86be1ca3a464/artifacts/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
notebook/: mongo_db_demo.ipynb
src/: data_ingestion.py  data_preprocessing.py  mlflow-autolog.py  mlflow-local.py  mlflow-remote.py  model_building.py  model_evaluation.py
src/inference/: predictor.py
src/model/: model.py  train.py
src/pipelines/: training_pipeline.py
src/utils/: logger.py
src/utils/src/data/: loader.py
